# self-compare

./: Cargo.toml  README.md
src/: ext.rs  lib.rs
