[package]
name = "self-compare"
version = "0.2.0"
description = "crate for mutably comparing all elements of a slice with each other"
authors = ["LFalch <lucas@wasd.dk>"]
repository = "https://github.com/LFalch/self-compare"
homepage = "https://github.com/LFalch/self-compare"
readme = "README.md"
license-file = "LICENSE"
